# bevy_game

./: Cargo.toml  flake.nix
assets/: asteroid.glb
src/: asteroids.rs  main.rs  spaceship.rs
