[package]
name = "game"
description = "Sudoku made with bevy"
publish = false
version = "0.1.0"

edition = "2021"

[dependencies]
anyhow = "1.0.86"
bevy = { version = "0.13.2", features = [ "wayland" ] }
bevy-debug-text-overlay = "8.1.0"
bevy-inspector-egui = "0.23.4"
bevy_defer = "0.10.0"
bevy_mod_sysfail = "7.0.0"
color-eyre = "0.6.3"
itertools = "0.12.1"
rand = "0.8.5"
rand_chacha = "0.3.1"
rayon = "1.10.0"
thiserror = "1.0.61"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
